2007-10-05  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imapcommands.c:
	allow IDLE command after authentication (bug #648)
	* check_dbmail_misc.c, misc.c, misc.h:
	work around incomplete utf7 decoding by gmime (bug #649)
	* dbmail.h.in:
	fix build for freebsd after _XOPEN_SOURCE change

2007-10-02  Paul Stevens <paul@nfg.nl>

	* pipe.c:
	limit the scope of the transaction during message insertion to avoid 
	deadlocks
	* check_dbmail_misc.c, misc.c:
	generate better randomness by using the glib calls in create_unique_id

2007-10-01  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c:
	fix segfault while storing broken multipart messages

2007-09-30  Paul J Stevens <paul@nfg.nl>

	* dbmailtypes.h, sql/mysql/2_2_5-2_3_0.mysql, 
	sql/mysql/create_tables.mysql, sql/postgresql/2_2_5-2_3_0.pgsql, 
	sql/postgresql/create_tables.pgsql:
	increate max mailbox name size to 255 (bug #563)
	* sql/mysql/2_2_5-2_3_0.mysql, sql/mysql/create_tables.mysql, 
	sql/postgresql/2_2_5-2_3_0.pgsql, sql/postgresql/create_tables.pgsql, 
	sql/sqlite/2_2_5-2_3_0.sqlite, sql/sqlite/create_tables.sqlite:
	fix bug #636
	* debian/dbmail.init, debian/dbmail.postinst, debian/dbmail.preinst:
	debian updates (ubuntu)

2007-09-23  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Comment out send_alert for execution errors (always caused by
	malformed addresses at this time, and very annoying).
	Clean up the send_notify function and clarify that it is unsupported
	at this time.

2007-09-16  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	fix regression

2007-09-14  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_message.c, db.c, dbmail-imapsession.c, misc.c:
	valgrind cleanups

2007-09-13  Paul J Stevens <paul@nfg.nl>

	* test-scripts/cleanlog.sh:
	fix cleanlog script

2007-09-05  Paul Stevens <paul@nfg.nl>

	* ChangeLog, db.c:
	fix regression for bug #634 (bug #642)

2007-09-05  Paul Stevens <paul@nfg.nl>

	* db.c: